UPDATE: swagger-artist
